fixed sold out and alignment

--- a/src/components/SeriesListing/Child/Child.module.css
+++ b/src/components/SeriesListing/Child/Child.module.css
@@ -42,8 +42,13 @@
     width: 250px;
 }
 
+.child .child-content {
+    max-width: 700px;
+}
+
 .child .child-info {
     width: 40%;
+    justify-content: center;
 }
 
 .child .child-title {
