--- a/src/pages/settings/settings.module.css
+++ b/src/pages/settings/settings.module.css
@@ -20,3 +20,7 @@
     font-size: 14pt;
     font-weight: 400;
 }
+
+.left {
+    padding-left: 1rem;
+}
